--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "iframe-phone": "^1.1.3",
+    "jquery": "^2.1.3",
+    "jquery-ui": "^1.10.5",
     "lodash": "^3.3.0",
     "react": "^0.13.3",
     "reflux": "^0.2.7"
@@ -24,6 +26,9 @@
     "gulp-coffeelint": "^0.4.0",
     "require-dir": "^0.1.0",
     "beepbeep": "^1.2.0",
-    "event-stream": "^3.3.0"
+    "event-stream": "^3.3.0",
+    "yargs": "^3.6.0",
+    "gulp-replace": "^0.5.3",
+    "gulp-if": "^1.2.5"
   }
 }
