--- a/package.json
+++ b/package.json
@@ -29,6 +29,10 @@
     "event-stream": "^3.3.0",
     "yargs": "^3.6.0",
     "gulp-replace": "^0.5.3",
-    "gulp-if": "^1.2.5"
+    "gulp-if": "^1.2.5",
+    "gh-pages": "^0.5.0",
+    "gulp-gh-pages": "^0.5.4",
+    "del": "^2.1.0",
+    "run-sequence": "^1.1.5"
   }
 }
