--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "jquery-ui": "^1.10.5",
     "lodash": "^3.3.0",
     "react": "^0.13.3",
-    "reflux": "^0.2.7"
+    "reflux": "^0.2.7",
+    "jiff": "^0.7.2"
   },
   "devDependencies": {
     "browserify": "^9.0.3",
