--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "url": "https://github.com/concord-consortium/cloud-file-manger"
   },
   "dependencies": {
+    "diff": "^2.2.1",
     "iframe-phone": "^1.1.3",
+    "jiff": "^0.7.2",
     "jquery": "^2.1.3",
     "jquery-ui": "^1.10.5",
     "lodash": "^3.3.0",
     "react": "^0.13.3",
-    "reflux": "^0.2.7",
-    "jiff": "^0.7.2"
+    "reflux": "^0.2.7"
   },
   "devDependencies": {
     "browserify": "^9.0.3",
