--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "jquery": "^2.1.3",
     "jquery-ui": "^1.10.5",
     "lodash": "^3.3.0",
-    "react": "^0.13.3",
-    "reflux": "^0.2.7"
+    "react": "^0.13.3"
   },
   "devDependencies": {
     "browserify": "^9.0.3",
