--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "jiff": "^0.7.2",
     "jquery": "^2.1.3",
     "lodash": "^3.3.0",
-    "react": "^0.13.3"
+    "react": "^0.13.3",
+    "svg-social-icons": "^1.1.0"
   },
   "devDependencies": {
     "browserify": "^9.0.3",
