--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "diff": "^2.2.1",
     "jiff": "^0.7.2",
     "jquery": "^2.1.3",
+    "jquery-ui": "^1.10.5",
     "lodash": "^3.3.0",
     "react": "^0.13.3",
     "svg-social-icons": "^1.1.0"
