--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jquery": "^2.1.3",
     "jquery-ui": "^1.10.5",
     "lodash": "^3.3.0",
+    "pako": "^0.2.8",
     "react": "^0.13.3",
     "svg-social-icons": "^1.1.0"
   },
