--- a/package.json
+++ b/package.json
@@ -17,23 +17,24 @@
     "svg-social-icons": "^1.1.0"
   },
   "devDependencies": {
-    "browserify": "^9.0.3",
-    "coffeeify": "^1.0.0",
-    "gulp": "^3.8.11",
-    "gulp-concat": "^2.5.2",
-    "gulp-stylus": "^2.0.1",
-    "vinyl-source-stream": "^1.1.0",
-    "coffee-script": "^1.9.1",
-    "gulp-coffeelint": "^0.4.0",
-    "require-dir": "^0.1.0",
     "beepbeep": "^1.2.0",
-    "event-stream": "^3.3.0",
-    "yargs": "^3.6.0",
-    "gulp-replace": "^0.5.3",
-    "gulp-if": "^1.2.5",
-    "gh-pages": "^0.5.0",
-    "gulp-gh-pages": "^0.5.4",
+    "browserify": "^9.0.3",
+    "coffee-script": "^1.9.1",
+    "coffeeify": "^1.0.0",
     "del": "^2.1.0",
-    "run-sequence": "^1.1.5"
+    "event-stream": "^3.3.0",
+    "gh-pages": "^0.5.0",
+    "gulp": "^3.8.11",
+    "gulp-coffeelint": "^0.4.0",
+    "gulp-concat": "^2.5.2",
+    "gulp-gh-pages": "^0.5.4",
+    "gulp-if": "^1.2.5",
+    "gulp-replace": "^0.5.3",
+    "gulp-stylus": "^2.0.1",
+    "package-json-versionify": "^1.0.1",
+    "require-dir": "^0.1.0",
+    "run-sequence": "^1.1.5",
+    "vinyl-source-stream": "^1.1.0",
+    "yargs": "^3.6.0"
   }
 }
