--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "diff": "^2.2.1",
+    "es6-promise": "^3.0.2",
     "jiff": "^0.7.2",
     "jquery": "^2.1.3",
     "jquery-ui": "^1.10.5",
