--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
     "gulp-concat": "^2.5.2",
     "gulp-gh-pages": "^0.5.4",
     "gulp-if": "^1.2.5",
+    "gulp-inject-string": "^1.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.3",
     "gulp-stylus": "^2.0.1",
     "package-json-versionify": "^1.0.1",
     "require-dir": "^0.1.0",
     "run-sequence": "^1.1.5",
+    "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "yargs": "^3.6.0"
   }
