--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "es6-promise": "^3.1.2",
     "jiff": "^0.7.3",
     "jquery": "^2.1.3",
+    "js-base64": "^2.1.9",
     "lodash": "^3.3.0",
     "pako": "^1.0.1",
     "react": "^15.0.1",
