--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "react-dom": "^15.4.1",
     "svg-social-icons": "^1.1.0"
   },
+  "resolutions": {
+    "gift": "0.10.2"
+  },
   "devDependencies": {
     "beepbeep": "^1.2.0",
     "browserify": "^13.0.0",
