--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "es6-promise": "^3.1.2",
     "jiff": "^0.7.3",
     "jquery": "^2.1.3",
-    "js-base64": "^2.1.9",
+    "js-base64": "2.3.2",
     "lodash": "^3.3.0",
-    "pako": "^1.0.1",
+    "pako": "1.0.6",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "svg-social-icons": "^1.1.0"
