--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "coffee-script": "^1.10.0",
     "coffeeify": "^2.0.1",
     "del": "^2.1.0",
-    "event-stream": "^3.3.4",
+    "event-stream": "3.3.4",
     "gh-pages": "^0.5.0",
     "gulp": "^3.8.11",
     "gulp-coffeelint": "^0.4.0",
