--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "svg-social-icons": "^1.1.0"
   },
   "resolutions": {
+    "natives": "^1.1.3",
     "gift": "0.10.2"
   },
   "devDependencies": {
