Add `--noGlobals` option for excluding globals bundle completely Add `--noPolyfill` option for excluding browser polyfills

--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
   },
   "scripts": {
     "build": "gulp clean-and-build",
-    "build:codap": "gulp clean-and-build --dest ../codap/apps/dg/resources/cloud-file-manager --codap --nojQuery --noReact --noMap",
+    "build:codap": "gulp clean-and-build --dest ../codap/apps/dg/resources/cloud-file-manager --codap --noGlobals --noMap",
     "build:watch": "gulp",
     "deploy": "gulp deploy",
     "strings:build": "./node_modules/.bin/strip-json-comments src/code/utils/lang/en-US-master.json > src/code/utils/lang/en-US.json",
