--- a/package.json
+++ b/package.json
@@ -29,10 +29,13 @@
   "devDependencies": {
     "beepbeep": "^1.2.0",
     "browserify": "^13.0.0",
-    "coffee-script": "^1.12.7",
+    "coffee-loader": "^0.9.0",
     "coffeeify": "^2.0.1",
+    "coffeescript": "^1.12.7",
+    "css-loader": "^3.5.2",
     "del": "^2.1.0",
     "event-stream": "3.3.4",
+    "file-loader": "^6.0.0",
     "gh-pages": "^0.5.0",
     "gulp": "^3.8.11",
     "gulp-coffeelint": "^0.4.0",
@@ -46,9 +49,13 @@
     "require-dir": "^0.3.2",
     "run-sequence": "^1.1.5",
     "strip-json-comments-cli": "^1.0.1",
+    "style-loader": "^1.1.3",
+    "stylus-loader": "^3.0.2",
     "sync-exec": "^0.6.2",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^1.1.2",
+    "webpack": "^4.42.1",
+    "webpack-cli": "^3.3.11",
     "yargs": "^3.6.0"
   },
   "scripts": {
