--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "coffee-loader": "^0.9.0",
     "coffeeify": "^2.0.1",
     "coffeescript": "^1.12.7",
+    "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.5.2",
     "del": "^2.1.0",
     "event-stream": "3.3.4",
@@ -45,6 +46,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.3",
     "gulp-stylus": "^2.7.0",
+    "mini-css-extract-plugin": "^0.9.0",
     "package-json-versionify": "^1.0.1",
     "require-dir": "^0.3.2",
     "run-sequence": "^1.1.5",
