--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "mini-css-extract-plugin": "^0.9.0",
     "package-json-versionify": "^1.0.1",
     "require-dir": "^0.3.2",
+    "rimraf": "^3.0.2",
     "run-sequence": "^1.1.5",
     "strip-json-comments-cli": "^1.0.1",
     "style-loader": "^1.1.3",
@@ -61,7 +62,8 @@
     "yargs": "^3.6.0"
   },
   "scripts": {
-    "build": "gulp clean-and-build",
+    "clean": "rimraf dist",
+    "build": "npm run clean && NODE_ENV=production webpack -p",
     "build:codap": "gulp clean-and-build --dest ../codap/apps/dg/resources/cloud-file-manager --codap --noGlobals --noMap",
     "build:watch": "gulp",
     "deploy": "gulp deploy",
