--- a/package.json
+++ b/package.json
@@ -59,19 +59,18 @@
     "vinyl-source-stream": "^1.1.2",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3",
     "yargs": "^3.6.0"
   },
   "scripts": {
     "clean": "rimraf dist",
     "build": "npm run clean && NODE_ENV=production webpack -p",
-    "build:codap": "gulp clean-and-build --dest ../codap/apps/dg/resources/cloud-file-manager --codap --noGlobals --noMap",
-    "build:watch": "gulp",
-    "deploy": "gulp deploy",
+    "build:codap": "npm run clean && NODE_ENV=production dest='../codap/apps/dg/resources/cloud-file-manager' codap=1 noGlobals=1 noMap=1 webpack -p",
     "strings:build": "./node_modules/.bin/strip-json-comments src/code/utils/lang/en-US-master.json > src/code/utils/lang/en-US.json",
     "strings:pull:usage": "echo Usage: `npm run strings:pull -- -a <poeditor_api_key>`",
     "strings:pull": "./bin/strings-pull-project.sh",
     "strings:push:usage": "echo Usage: `npm run strings:push -- -a <poeditor_api_key>`",
     "strings:push": "./bin/strings-push-project.sh",
-    "serve": "live-server --open=dist/examples"
+    "serve": "webpack-dev-server"
   }
 }
