Address some early PR feedback
[#172253253]
https://www.pivotaltracker.com/n/projects/2441249/stories/172253253

--- a/package.json
+++ b/package.json
@@ -71,6 +71,6 @@
     "strings:pull": "./bin/strings-pull-project.sh",
     "strings:push:usage": "echo Usage: `npm run strings:push -- -a <poeditor_api_key>`",
     "strings:push": "./bin/strings-push-project.sh",
-    "serve": "webpack-dev-server"
+    "start": "webpack-dev-server"
   }
 }
