--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "gulp-stylus": "^2.7.0",
     "mini-css-extract-plugin": "^0.9.0",
     "package-json-versionify": "^1.0.1",
+    "replace-in-file-webpack-plugin": "^1.0.6",
     "require-dir": "^0.3.2",
     "rimraf": "^3.0.2",
     "run-sequence": "^1.1.5",
