--- a/package.json
+++ b/package.json
@@ -27,10 +27,7 @@
     "gift": "0.10.2"
   },
   "devDependencies": {
-    "beepbeep": "^1.2.0",
-    "browserify": "^13.0.0",
     "coffee-loader": "^0.9.0",
-    "coffeeify": "^2.0.1",
     "coffeescript": "^1.12.7",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.5.2",
@@ -38,33 +35,19 @@
     "cypress-commands": "^1.1.0",
     "cypress-xpath": "^1.4.0",
     "del": "^2.1.0",
-    "event-stream": "3.3.4",
     "file-loader": "^6.0.0",
-    "gh-pages": "^0.5.0",
-    "gulp": "^3.8.11",
-    "gulp-coffeelint": "^0.4.0",
-    "gulp-concat": "^2.5.2",
-    "gulp-gh-pages": "^0.5.4",
-    "gulp-if": "^1.2.5",
-    "gulp-rename": "^1.2.2",
-    "gulp-replace": "^0.5.3",
-    "gulp-stylus": "^2.7.0",
     "mini-css-extract-plugin": "^0.9.0",
+    "npm-run-all": "^4.1.5",
     "package-json-versionify": "^1.0.1",
     "replace-in-file-webpack-plugin": "^1.0.6",
     "require-dir": "^0.3.2",
     "rimraf": "^3.0.2",
-    "run-sequence": "^1.1.5",
-    "strip-json-comments-cli": "^1.0.1",
     "style-loader": "^1.1.3",
+    "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
     "sync-exec": "^0.6.2",
-    "vinyl-buffer": "^1.0.1",
-    "vinyl-source-stream": "^1.1.2",
     "webpack": "^4.42.1",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3",
-    "yargs": "^3.6.0"
+    "webpack-cli": "^3.3.11"
   },
   "scripts": {
     "clean": "rimraf dist",
@@ -75,8 +58,9 @@
     "strings:pull": "./bin/strings-pull-project.sh",
     "strings:push:usage": "echo Usage: `npm run strings:push -- -a <poeditor_api_key>`",
     "strings:push": "./bin/strings-push-project.sh",
-    "start": "webpack-dev-server",
-    "serve": "live-server --open=dist/examples",
+    "start": "npm-run-all --parallel watch:server watch:build",
+    "watch:build": "webpack --watch",
+    "watch:server": "live-server --open=dist/examples",
     "test:local": "cypress open --env testEnv=local "
   }
 }
