fix `start` script to serve from `./dist` folder
fix `start` script to serve from `./dist` folder

[#172253253]
https://www.pivotaltracker.com/n/projects/2441249/stories/172253253

--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "strings:push": "./bin/strings-push-project.sh",
     "start": "npm-run-all --parallel watch:server watch:build",
     "watch:build": "webpack --watch",
-    "watch:server": "live-server --open=dist/examples",
-    "test:local": "cypress open --env testEnv=local "
+    "watch:server": "live-server ./dist --open=examples",
+    "test:local": "cypress open --env testEnv=local"
   }
 }
