--- a/.eslintrc
+++ b/.eslintrc
@@ -6,7 +6,8 @@
     "node": true
   },
   "parserOptions": {
-    "ecmaVersion": 2017
+    "ecmaVersion": 9,
+    "sourceType": "module"
   },
   "globals": {
     "$": false,
