--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "gift": "0.10.2"
   },
   "devDependencies": {
+    "@types/react": "^16.9.34",
+    "@typescript-eslint/eslint-plugin": "^2.29.0",
     "coffee-loader": "^0.9.0",
     "coffeescript": "^1.12.7",
     "copy-webpack-plugin": "^5.1.1",
@@ -50,7 +52,6 @@
     "sync-exec": "^0.6.2",
     "ts-loader": "^7.0.1",
     "typescript": "^3.8.3",
-    "typescript-eslint": "0.0.1-alpha.0",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11"
   },
