--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
   "devDependencies": {
     "@types/react": "^16.9.34",
     "@typescript-eslint/eslint-plugin": "^2.29.0",
+    "@typescript-eslint/parser": "^2.29.0",
+    "babel-eslint": "^10.1.0",
     "coffee-loader": "^0.9.0",
     "coffeescript": "^1.12.7",
     "copy-webpack-plugin": "^5.1.1",
@@ -38,6 +40,7 @@
     "cypress-xpath": "^1.4.0",
     "del": "^2.1.0",
     "eslint": "^6.8.0",
+    "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-react": "^7.19.0",
     "file-loader": "^6.0.0",
     "mini-css-extract-plugin": "^0.9.0",
