--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,8 @@
     "esModuleInterop": true,
     "target": "es5",
     "jsx": "react",
-    "allowJs": true
+    "allowJs": true,
+    "diagnostics": true,
+    "experimentalDecorators": true
   }
 }
