Run jest tests on  Travis CI
* Add Jest test framework
* Add a passing test
* Add Jest to Travis CI script

[#172254686]
https://www.pivotaltracker.com/n/projects/2441249/stories/172254686

--- a/.eslintrc
+++ b/.eslintrc
@@ -3,7 +3,8 @@
     "browser": true,
     "es6": true,
     "amd": true,
-    "node": true
+    "node": true,
+    "jest/globals": true
   },
   "parser": "babel-eslint",
   "parserOptions": {
@@ -23,7 +24,7 @@
     // "sc_super": false, "static_url": false, "NO": false, "YES": false,
     // "module": false, "require": false
   },
-  "plugins": ["react", "@typescript-eslint", "babel"],
+  "plugins": ["react", "@typescript-eslint", "babel", "jest"],
   "extends": [ "eslint:recommended", "plugin:react/recommended" ],
   "settings": {
     "react": {
