--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gift": "0.10.2"
   },
   "devDependencies": {
+    "@types/jest": "^25.2.1",
     "@types/react": "^16.9.34",
     "@typescript-eslint/eslint-plugin": "^2.29.0",
     "@typescript-eslint/parser": "^2.29.0",
@@ -41,8 +42,10 @@
     "del": "^2.1.0",
     "eslint": "^6.8.0",
     "eslint-plugin-babel": "^5.3.0",
+    "eslint-plugin-jest": "^23.8.2",
     "eslint-plugin-react": "^7.19.0",
     "file-loader": "^6.0.0",
+    "jest": "^25.5.1",
     "mini-css-extract-plugin": "^0.9.0",
     "npm-run-all": "^4.1.5",
     "package-json-versionify": "^1.0.1",
@@ -53,6 +56,7 @@
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
     "sync-exec": "^0.6.2",
+    "ts-jest": "^25.4.0",
     "ts-loader": "^7.0.1",
     "typescript": "^3.8.3",
     "webpack": "^4.42.1",
@@ -71,6 +75,8 @@
     "start": "npm-run-all --parallel watch:server watch:build",
     "watch:build": "webpack --watch --mode development",
     "watch:server": "live-server ./dist --open=examples",
-    "test:local": "cypress open --env testEnv=local"
+    "test:local": "cypress open --env testEnv=local",
+    "test": "jest",
+    "test:watch": "jest --watch"
   }
 }
