--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,7 @@
     "node": true,
     "jest/globals": true
   },
+  "ignorePatterns": ["*original*"],
   "parser": "babel-eslint",
   "parserOptions": {
     "ecmaVersion": 7,
@@ -20,9 +21,6 @@
     "createReactClass": false,
     "_": false,
     "gapi": false
-    // "DG": false, "Raphael": false, "$": false, "SC": false, "sc_require": false,
-    // "sc_super": false, "static_url": false, "NO": false, "YES": false,
-    // "module": false, "require": false
   },
   "plugins": ["react", "@typescript-eslint", "babel", "jest"],
   "extends": [ "eslint:recommended", "plugin:react/recommended" ],
