--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "watch:server": "live-server ./dist --open=examples",
     "test:local": "cypress open --env testEnv=local",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "lint": "eslint ./src/code"
   }
 }
