--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@concord-consortium/token-service": "^1.3.0",
+    "aws-sdk": "^2.668.0",
     "base64-js": "^1.2.0",
+    "client-oauth2": "^4.2.5",
     "create-react-class": "^15.6.3",
     "diff": "^2.2.1",
     "es6-promise": "^3.1.2",
