--- a/package.json
+++ b/package.json
@@ -54,12 +54,14 @@
     "replace-in-file-webpack-plugin": "^1.0.6",
     "require-dir": "^0.3.2",
     "rimraf": "^3.0.2",
+    "sinon": "^9.0.2",
     "style-loader": "^1.1.3",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
     "sync-exec": "^0.6.2",
     "ts-jest": "^25.4.0",
     "ts-loader": "^7.0.1",
+    "ts-mock-imports": "^1.3.0",
     "typescript": "^3.8.3",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11"
