--- a/package.json
+++ b/package.json
@@ -78,8 +78,10 @@
     "strings:push:usage": "echo Usage: `npm run strings:push -- -a <poeditor_api_key>`",
     "strings:push": "./bin/strings-push-project.sh",
     "start": "npm-run-all --parallel watch:server watch:build",
+    "start:secure": "npm-run-all --parallel watch:server:secure watch:build",
     "watch:build": "webpack --watch --mode development",
     "watch:server": "live-server ./dist --open=examples",
+    "watch:server:secure": "live-server --https=live-server-ssl-config.js ./dist --open=examples",
     "test:local": "cypress open --env testEnv=local",
     "test": "jest",
     "test:watch": "jest --watch",
