--- a/package.json
+++ b/package.json
@@ -9,21 +9,26 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@concord-consortium/lara-interactive-api": "^0.5.0-pre.1",
     "@concord-consortium/token-service": "^1.3.0",
+    "@types/react-dom": "^16.9.8",
     "aws-sdk": "^2.668.0",
     "base64-js": "^1.2.0",
     "client-oauth2": "^4.2.5",
     "create-react-class": "^15.6.3",
     "diff": "^2.2.1",
     "es6-promise": "^3.1.2",
+    "iframe-phone": "^1.3.1",
     "jiff": "^0.7.3",
-    "jquery": "^2.1.3",
-    "js-base64": "2.3.2",
+    "jquery": "^2.2.4",
+    "js-base64": "^2.3.2",
     "lodash": "^4.17.15",
     "pako": "^1.0.11",
+    "query-string": "^6.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-dom-factories": "^1.0.2",
+    "screenfull": "^5.0.2",
     "svg-social-icons": "^1.1.0"
   },
   "resolutions": {
@@ -81,8 +86,8 @@
     "start": "npm-run-all --parallel watch:server watch:build",
     "start:secure": "npm-run-all --parallel watch:server:secure watch:build",
     "watch:build": "webpack --watch --mode development",
-    "watch:server": "live-server ./dist --open=examples",
-    "watch:server:secure": "live-server --https=live-server-ssl-config.js ./dist --open=examples",
+    "watch:server": "live-server --port=8888 ./dist --open=examples",
+    "watch:server:secure": "live-server --port=8888 --https=live-server-ssl-config.js ./dist --open=examples",
     "test:local": "cypress open --env testEnv=local",
     "test": "jest",
     "test:watch": "jest --watch",
