--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "@concord-consortium/token-service": "^1.3.0",
+    "@types/lodash": "^4.14.157",
     "aws-sdk": "^2.668.0",
     "base64-js": "^1.2.0",
     "client-oauth2": "^4.2.5",
