--- a/package.json
+++ b/package.json
@@ -35,12 +35,12 @@
   "devDependencies": {
     "@types/aws-sdk": "^2.7.0",
     "@types/jest": "^25.2.1",
+    "@types/lodash": "^4.14.157",
     "@types/pako": "^1.0.1",
     "@types/react": "^16.9.34",
-    "@types/lodash": "^4.14.157",
+    "@types/react-dom": "^16.9.8",
     "@typescript-eslint/eslint-plugin": "^2.29.0",
     "@typescript-eslint/parser": "^2.29.0",
-    "@types/react-dom": "^16.9.8",
     "babel-eslint": "^10.1.0",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.5.2",
@@ -54,6 +54,7 @@
     "eslint-plugin-react": "^7.19.0",
     "file-loader": "^6.0.0",
     "jest": "^25.5.1",
+    "live-server": "^1.2.1",
     "mini-css-extract-plugin": "^0.9.0",
     "npm-run-all": "^4.1.5",
     "package-json-versionify": "^1.0.1",
@@ -61,6 +62,7 @@
     "require-dir": "^0.3.2",
     "rimraf": "^3.0.2",
     "sinon": "^9.0.2",
+    "strip-json-comments-cli": "^1.0.1",
     "style-loader": "^1.1.3",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
