--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@typescript-eslint/parser": "^2.29.0",
     "babel-eslint": "^10.1.0",
     "copy-webpack-plugin": "^5.1.1",
+    "cross-env": "^7.0.2",
     "css-loader": "^3.5.2",
     "cypress": "^4.4.1",
     "cypress-commands": "^1.1.0",
@@ -70,14 +71,14 @@
     "ts-loader": "^7.0.1",
     "ts-mock-imports": "^1.3.0",
     "typescript": "^3.8.3",
-    "webpack": "^4.42.1",
+    "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
   },
   "scripts": {
     "clean": "rimraf dist",
-    "build": "npm run clean && webpack --mode development",
-    "build:production": "npm run clean && NODE_ENV=production webpack --mode production -p",
-    "build:codap": "npm run clean && NODE_ENV=production dest='../codap/apps/dg/resources/cloud-file-manager' codap=1 noGlobals=1 noMap=1 webpack -p",
+    "build": "npm run clean && NODE_ENV=development webpack",
+    "build:production": "npm run clean && NODE_ENV=production webpack -p",
+    "build:codap": "npm run clean && cross-env-shell NODE_ENV=development dest=../codap/apps/dg/resources/cloud-file-manager codap=1 noGlobals=1 noMap=1 'webpack && mv $dest/js/app.js $dest/js/app.js.ignore'",
     "strings:build": "./node_modules/.bin/strip-json-comments src/code/utils/lang/en-US-master.json > src/code/utils/lang/en-US.json",
     "strings:pull:usage": "echo Usage: `npm run strings:pull -- -a <poeditor_api_key>`",
     "strings:pull": "./bin/strings-pull-project.sh",
