--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jiff": "^0.7.3",
     "jquery": "^2.2.4",
     "js-base64": "^2.3.2",
+    "js-sha256": "^0.9.0",
     "lodash": "^4.17.15",
     "pako": "^1.0.11",
     "query-string": "^6.13.1",
