--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ cache:
     - "$HOME/.npm"
     - "$HOME/.cache"
 install:
+- travis_retry pyenv global 3.6
 - travis_retry gem install s3_website -v 3.4.0
 - travis_retry pip install awscli --upgrade --user
 - travis_retry npm ci
